I added "Update Password" button in this UI

--- a/dashbord.html
+++ b/dashbord.html
@@ -62,6 +62,7 @@
                   </li>
                   <li><a class="dropdown-item" href="/profile">Profile</a></li>
                   <li><a class="dropdown-item" href="/settings">Settings</a></li>
+                  <li><a class="dropdown-item" href="/settings">Update Password</a></li>
                   <li><hr class="dropdown-divider"></li>
                   <li><a class="dropdown-item text-danger" href="/logout">Logout</a></li>
                 </ul>
